// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <TextareaField
    disabled={false}
    error={null}
    errorIcon={
      <IconError
        viewBox="0 0 48 48"
        xmlns="http://www.w3.org/2000/svg"
      />
    }
    help={null}
    hideRequired={false}
    inputAttrs={Object {}}
    inputId="test-input"
    isIncomplete={false}
    isInline={false}
    isInvalid={false}
    isLabelHidden={false}
    label="Label"
    labelAttrs={Object {}}
    required={false}
    showOptional={false}
  >
    <Field
      error={null}
      errorIcon={
        <IconError
          viewBox="0 0 48 48"
          xmlns="http://www.w3.org/2000/svg"
        />
      }
      help={null}
      hideRequired={false}
      htmlFor="test-input"
      isInline={false}
      isInvalid={false}
      isLabelHidden={false}
      label="Label"
      labelAttrs={Object {}}
      required={false}
      showOptional={false}
    >
      <div
        className="field orion-fusion-theme"
      >
        <div
          className="label-group"
        >
          <label
            className="label"
            htmlFor="test-input"
          >
            Label
          </label>
          <div
            className="error-icon-hidden"
          >
            <IconError
              viewBox="0 0 48 48"
              xmlns="http://www.w3.org/2000/svg"
            >
              <IconBase
                ariaLabel={null}
                className="IconError"
                focusable="false"
                height="1em"
                isBidi={false}
                isSpin={false}
                viewBox="0 0 48 48"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <svg
                  aria-hidden="true"
                  className="tui-Icon icon orion-fusion-theme IconError"
                  focusable="false"
                  height="1em"
                  viewBox="0 0 48 48"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M24 0c13.3 0 24 10.7 24 24S37.3 48 24 48 0 37.3 0 24C0 10.8 10.7 0 23.9 0h.1z"
                    fill="#E50000"
                  />
                  <path
                    d="M7 21.5h34v5H7v-5z"
                    fill="#FFF"
                  />
                </svg>
              </IconBase>
            </IconError>
          </div>
        </div>
        <Textarea
          disableResize={false}
          disabled={false}
          id="test-input"
          isAutoResizable={false}
          isIncomplete={false}
          isInvalid={false}
          key=".0"
          name={null}
          required={false}
          rows={null}
          size="small"
        >
          <textarea
            className="textarea orion-fusion-theme"
            disabled={false}
            id="test-input"
            name={null}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            rows={2}
          />
        </Textarea>
      </div>
    </Field>
  </TextareaField>
</ThemeContextProvider>
`;

exports[`should render a TextareaField with props 1`] = `
<Field
  error="Text"
  errorIcon={
    <IconHelp
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help="Help"
  hideRequired={true}
  htmlFor="test-input"
  isInline={true}
  isInvalid={true}
  isLabelHidden={true}
  label="Label Test"
  labelAttrs={
    Object {
      "className": "label",
    }
  }
  required={false}
  showOptional={true}
>
  <Textarea
    aria-describedby="test-input-error test-input-help"
    defaultValue="Value"
    disableResize={false}
    disabled={false}
    id="test-input"
    isAutoResizable={false}
    isIncomplete={false}
    isInvalid={false}
    name="test"
    onChange={[Function]}
    required={false}
    rows={15}
    size="small"
    value="Value"
  />
</Field>
`;

exports[`should render a default TextareaField component 1`] = `
<Field
  error={null}
  errorIcon={
    <IconError
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help={null}
  hideRequired={false}
  htmlFor="test-input"
  isInline={false}
  isInvalid={false}
  isLabelHidden={false}
  label="Label"
  labelAttrs={Object {}}
  required={false}
  showOptional={false}
>
  <Textarea
    disableResize={false}
    disabled={false}
    id="test-input"
    isAutoResizable={false}
    isIncomplete={false}
    isInvalid={false}
    name={null}
    required={false}
    rows={null}
    size="small"
  />
</Field>
`;

exports[`should render a disabled TextareaField component 1`] = `
<Field
  error={null}
  errorIcon={
    <IconError
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help={null}
  hideRequired={false}
  htmlFor="test-input"
  isInline={false}
  isInvalid={false}
  isLabelHidden={false}
  label="Label"
  labelAttrs={Object {}}
  required={false}
  showOptional={false}
>
  <Textarea
    disableResize={false}
    disabled={true}
    id="test-input"
    isAutoResizable={false}
    isIncomplete={false}
    isInvalid={false}
    name={null}
    required={false}
    rows={null}
    size="small"
  />
</Field>
`;

exports[`should render a disabled TextareaField component via inputAttrs 1`] = `
<Field
  error={null}
  errorIcon={
    <IconError
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help={null}
  hideRequired={false}
  htmlFor="test-input"
  isInline={false}
  isInvalid={false}
  isLabelHidden={false}
  label="Label"
  labelAttrs={Object {}}
  required={false}
  showOptional={false}
>
  <Textarea
    disableResize={false}
    disabled={true}
    id="test-input"
    isAutoResizable={false}
    isIncomplete={false}
    isInvalid={false}
    name={null}
    required={false}
    rows={null}
    size="small"
  />
</Field>
`;

exports[`should render a valid TextareaField with props 1`] = `
<Field
  error="Text"
  errorIcon={
    <IconHelp
      viewBox="0 0 48 48"
      xmlns="http://www.w3.org/2000/svg"
    />
  }
  help="Help"
  hideRequired={true}
  htmlFor="test-input"
  isInline={true}
  isInvalid={false}
  isLabelHidden={true}
  label="Label Test"
  labelAttrs={
    Object {
      "className": "label",
    }
  }
  required={false}
  showOptional={true}
>
  <Textarea
    aria-describedby="test-input-help"
    defaultValue="Value"
    disableResize={false}
    disabled={false}
    id="test-input"
    isAutoResizable={false}
    isIncomplete={false}
    isInvalid={false}
    name="test"
    onChange={[Function]}
    required={false}
    rows={null}
    size="small"
    type="number"
    value="Value"
  />
</Field>
`;
